# pySTED

./: .buildinfo  .gitignore  .hg_archival.txt  MANIFEST.in  README.md  RMS_calculator.py  acquire.py  acquire_pixelsizing_test.py  acquire_pixelsizing_test2.py  acquisition_example.py  add_event_dicts.py  ca_data_analysis.py  datamap_implem_vars.py  datamap_object_implem.py  dymin.ipynb  dymin.py  ex_albert.py  ex_albert_exp.py  genindex.html  hidden_vars.py  index.html  laser_symmetry_tests.py  make_video.py  objects.inv  py-modindex.html  pySTED_tutorial.ipynb  pySTED_tutorial.py  pyproject.toml  requirements-nodes.txt  requirements.txt  requirements2.txt  search.html  searchindex.js  setup.py  simple_example_script.py  synapse_generation.py  ubf_simple_test.py  ubf_simple_test_2.py  update.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: pysted.base.Clock.doctree  pysted.base.Clock.reset.doctree  pysted.base.Clock.update_time.doctree  pysted.base.Datamap.doctree  pysted.base.Datamap.set_bleached_datamap.doctree  pysted.base.Datamap.set_roi.doctree  pysted.base.Detector.doctree  pysted.base.Detector.get_detection_psf.doctree  pysted.base.Detector.get_signal.doctree  pysted.base.DonutBeam.doctree  pysted.base.DonutBeam.get_intensity.doctree  pysted.base.Fluorescence.doctree  pysted.base.Fluorescence.get_k_bleach.doctree  pysted.base.Fluorescence.get_photons.doctree  pysted.base.Fluorescence.get_psf.doctree  pysted.base.Fluorescence.get_sigma_abs.doctree  pysted.base.Fluorescence.get_sigma_ste.doctree  pysted.base.GaussianBeam.doctree  pysted.base.GaussianBeam.get_intensity.doctree  pysted.base.Microscope.add_to_pixel_bank.doctree  pysted.base.Microscope.cache.doctree  pysted.base.Microscope.clear_cache.doctree  pysted.base.Microscope.doctree  pysted.base.Microscope.empty_pixel_bank.doctree  pysted.base.Objective.doctree  (+204 more)
aaai_figure1_stuff/: fig1_test1.py  fig1b_test1.py  fig1d_test1.py
doc/: conf.py
docs/: Makefile  conf.py  index.rst  update.sh
examples/: acquire_noisy.py  acquire_singledot.py  acquire_stack.py  experiment_example.ini
flash_files/: events_curves.npy  stream1_events.txt
frc/: compute.py  fourierRingCorrelation.pyx  setup.py
iid_figs_gen/: datamap_flashing.py  dmaps_generation.py  light_curves_sampling.py  nanodomains.py  nanodomains_fig.py
minor_bugs/: decay_time_bug.py
modules/: pysted.base.Clock.html  pysted.base.Clock.reset.html  pysted.base.Clock.update_time.html  pysted.base.Datamap.html  pysted.base.Datamap.set_bleached_datamap.html  pysted.base.Datamap.set_roi.html  pysted.base.Detector.get_detection_psf.html  pysted.base.Detector.get_signal.html  pysted.base.Detector.html  pysted.base.DonutBeam.get_intensity.html  pysted.base.DonutBeam.html  pysted.base.Fluorescence.get_k_bleach.html  pysted.base.Fluorescence.get_photons.html  pysted.base.Fluorescence.get_psf.html  pysted.base.Fluorescence.get_sigma_abs.html  pysted.base.Fluorescence.get_sigma_ste.html  pysted.base.Fluorescence.html  pysted.base.GaussianBeam.get_intensity.html  pysted.base.GaussianBeam.html  pysted.base.Microscope.add_to_pixel_bank.html  pysted.base.Microscope.cache.html  pysted.base.Microscope.clear_cache.html  pysted.base.Microscope.empty_pixel_bank.html  pysted.base.Microscope.get_effective.html  pysted.base.Microscope.get_signal_and_bleach.html  pysted.base.Microscope.html  pysted.base.Microscope.is_cached.html  pysted.base.Microscope.take_from_pixel_bank.html  pysted.base.Objective.get_transmission.html  pysted.base.Objective.html  pysted.base.RandomActionSelector.html  pysted.base.RandomActionSelector.select_action.html  pysted.base.TemporalDatamap.bleach_future.html  pysted.base.TemporalDatamap.create_t_stack_dmap.html  pysted.base.TemporalDatamap.html  pysted.base.TemporalDatamap.set_bleached_datamap.html  pysted.base.TemporalDatamap.set_roi.html  pysted.base.TemporalDatamap.update_dicts.html  pysted.base.TemporalDatamap.update_whole_datamap.html  pysted.base.TemporalExperiment.html  (+189 more)
pysted/: __init__.py  _draw.pyx  acquisition.py  base.py  bleach_funcs.c  bleach_funcs.pyx  bleach_functions.py  cUtils.c  exp_data_gen.py  microscopes.py  raster.c  raster.pyx  temporal.py  utils.py
script_templates/: action_framework.py  action_framework_2.py  action_framework_bleaching.py  bleach_unbound_tests.py  experiment_only.py  fixed_time_random_flashes.py  general_acq.py  make_exp_video.py  single_synapse_random_flash.py  temporal_dmap.py  time_integration.py  var_pdt_exp.py  var_pdt_exp2.py
source/: frc.rst
tests/: TestBleachingConstants.ipynb  TestBleachingConstants.py  TestScanTime.py  TestSynapseGenerationWithNanodomains.py  TestTimedExp.py  TestTimedExpV2.py  TestTimedExpV3.py  TestTimedExpV3p0.py  TestTimedExpV3p1.py  bleach.py  bleachMultipleSteps.py  components.py  rescale_data_map.py  rescale_view.py
tests_bt_2/: back_to_back_acqs_test.py  base_vs_x10_quick_tests.py  fluorophore_param_alb_quick_test.py  fluorophore_param_max_proj.py  fluorophore_param_mod.py  fluorophore_param_mod_albert.py  fluorophore_param_mod_x10.py  fluorophore_param_mod_x100.py  future_bleach_verif.py
(+284 files in other folders)
