[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=61.0",
    "ruff>=0.4.8",
    "wheel",
    "cython>=3",
    "numpy>=2",
    "oldest-supported-numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysted"
authors = [
    {name = "Anthony Bilodeau"},
    {name = "Benoit Turcotte"},
    {name = "Albert Michaud-Gagnon"},
    {name = "Audrey Durand"},    
]
dynamic = ["version"]
readme = "README.md"
description = "STED image simulator in Python"
keywords = ["microscopy", "sted", "simulation"]
requires-python = ">=3.9"
dependencies = [
    "certifi",
    "cycler",
    "Cython",
    "decorator",
    "imageio",
    "kiwisolver",
    "matplotlib",
    "networkx",
    "numpy",
    "pyparsing",
    "python-dateutil",
    "PyWavelets",
    "scikit-image",
    "scipy",
    "six",
    "tifffile",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "pysted.VERSION"}

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.npy"]

[project.urls]
Homepage = "https://github.com/FLClab/pySTED"
Issues = "https://github.com/FLClab/pySTED/issues"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# Linting configuration for Ruff since numpy 2.0
[tool.ruff.lint]
select = ["NPY201"]
